United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6987135 Performance regression on Intel platform with 32-bits edition between 6u13 and 6u14.
6987135 : Performance regression on Intel platform with 32-bits edition between 6u13 and 6u14.

Details
Type:
Bug
Submit Date:
2010-09-24
Status:
Closed
Updated Date:
2011-03-16
Project Name:
JDK
Resolved Date:
2011-03-16
Component:
hotspot
OS:
windows_2008
Sub-Component:
compiler
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
6u14
Fixed Versions:
6u24-rev

Related Reports
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
Result of running the test case Bm1.java provided by the customer on my test server. It's a very simple test case mono threaded (lower values are better):

JDK Version   Time (ms)
            32-bits  64-bits
6u12          11300     9471
6u13          11178     9455
6u14          19810     2672
6u15          19898     2778
6u16          19750     2651
6u17          19791     2733
6u18          18973     2589
6u19          18867     2630
6u20          18892     2651
6u21          18146     2645

We are seeing a big performance regression between 6u13 and 6u14.

The issue is seen with the -server VM argument set. Switching to -client improves the situation but still there is a little performance regression.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/ae065c367d93
                                     
2010-12-04
EVALUATION

Changes for 6603011 added the conversion of long division by constant to the code with multiply.
But some modern cpus improved DIV instruction performance so that 6603011 changes caused regression.
                                     
2010-11-02



Hardware and Software, Engineered to Work Together