6987135: Performance regression on Intel platform with 32-bits edition between 6u13 and 6u14

Use hardware DIV instruction for long division by constant when it is faster than code with multiply.

Reviewed-by: never